fixed navigation wrap

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -67,6 +67,9 @@ ul {
   justify-content: space-between;
   background-color: rgb(42, 42, 42);
 }
+.top-header .content-wrapper {
+  flex-wrap: nowrap;
+}
 header h1 {
   flex: 0 0 auto;
   color: #fff;
